--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,25 +1,43 @@
 project:
   type: website
   output-dir: "."
-  
+
 website:
-  title: "DANL 399"
-  page-footer: "Copyright 2023, Nicky Andrews" 
-  reader-mode: false
+  title: "Nicky Andrews"
   navbar:
     pinned: true
     left:
-      - text: project
-        href: basic-example.qmd
-            
+      - text: Data Visualization
+        menu:
+        - text: Lecture 1 
+          href: ClassDANL0918.qmd
+        - text: Lecture 2
+          href: ClassDANL1002.qmd
+        - text: Lecture 3
+          href: ClassDANL1016.qmd
+        - text: Lecture 4
+          href: ClassDANL1127.qmd
+        - text: Homework1
+          href: ClassDANLHW1.qmd
+          
+      - text: Blog
+        href: blog-listing.qmd
+      - text: NBA Best Line-up Data
+        href: nba_best_players.qmd
+      - text: NBA Best Line-up Writing
+        href: ClassDANLFinal_Project.docx
+
+  page-footer: 
+    center: "Powered with GitHub and Quarto<br>© Nicky Andrews, 2023"
+
 format:
   html:
-    theme:
+    theme: 
       light: flatly
-      dark: [darkly, theme-dark.scss]
-    # mainfont: Georgia, serif;
-    # site-url: https://danl-web.netlify.app
+      dark: darkly
+    mainfont: system-ui; 
+    highlight-style: atom-one
     css: styles.css
-    mainfont: Gill Sans, sans-serif;
-    toc: true
+    toc: false
     include-after-body: target_blank.html
+    
