--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,10 +7,8 @@ website:
   navbar:
     pinned: true
     left:
-      - text: NBA Data
-        href: nba_best_players/nba_best_players.qmd
-      - text: NBA Write-up
-        href: nba_best_players/nba_best_players_writeup.qmd
+      - text: About Me
+        href: welcome/index.qmd
       - text: Blog
         href: blog-listing.qmd
   page-footer: 
